<resources>
    <string name="app_name">UAS2020</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="Harga">Harga</string>
    <string name="Stok">Stok</string>
    <string name="btn_tambah_produk">Stok</string>
    <string name="teks_splashscreeen">Helloww Shoppers</string>
</resources>
