<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProductActivity"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_produk"
        />
    <EditText
        android:id="@+id/edtDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deskripsi"
        />
    <EditText
        android:id="@+id/edtHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Harga"
        />
    <EditText
        android:id="@+id/edtStok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Stok"
        />
    <Button
        android:id="@+id/btnAddProduk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btn_tambah_produk"
        />
</LinearLayout>